[package]
authors = ["Artur Kowalski <arturkow2000@gmail.com>"]
categories = ["no-std"]
description = "Minimal runtime / startup for Cortex-A microprocessors"
keywords = ["arm", "cortex-a", "runtime", "startup"]
license = "MIT"
name = "cortex-a-rt"
version = "0.0.0"
edition = "2021"

[features]
single-core-critical-section = ["dep:critical-section"]
defmt = ["dep:defmt"]
log = ["dep:log"]
panic_handler = []

[dependencies]
cortex-a-rt-macros = { path = "macros" }

[dependencies.critical-section]
version = "1"
optional = true
features = ["restore-state-u8"]

[dependencies.defmt]
version = "0.3"
optional = true

[dependencies.log]
version = "0.4"
optional = true
